exercices/ch3/ch3_2.8/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: theprojectapp
  name: theprojectapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: theprojectapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: theprojectapp
    spec:
      containers:
      - image: jmandl/theprojectapp:3.2.8
        name: theprojectapp
        resources: {}
status: {}
